public class Position {
    public float x, y;

    @Override
    public String toString() {
        return "Position{" +
                "\n\t\tx=" + x +
                ",\n\t\t y=" + y +
                '}';
    }
}
